--- a/Projeto CSS3 Avançado 1/css/estilo2.css
+++ b/Projeto CSS3 Avançado 1/css/estilo2.css
@@ -15,7 +15,8 @@
 
 .caixa .ultimo {
 	background: url(../imagens/baixo2.png) no-repeat left bottom;
-	padding-bottom: 20px;
+	width: 400px;
+	height: 24px;
 }
 
 
